--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Telegram Bot Token (replace with your actual token)
-TELEGRAM_BOT_TOKEN=your-telegram-bot-token
+TELEGRAM_BOT_TOKEN=6892664579:AAFyjH9E1UPjUgnpOyjJMKoTGWkQ3y5ZJXY
 
 # Port for the server to listen on (default: 3000)
 PORT=3000
