--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 # Telegram Bot Token (replace with your actual token)
 TELEGRAM_BOT_TOKEN=7919451250:AAEfjKengRLViS8PIJub56GJQPS17uCBoHQ
 
+RENDER_EXTERNAL_URL:https://telegram-bot-dash.onrender.com
+
 # Port for the server to listen on (default: 3000)
 PORT=3000
