--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "express": "^4.18.2",
     "node-telegram-bot-api": "^0.61.0",
     "dotenv": "^16.4.7",
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "pg": "^8.11.3"
   },
   "engines": {
     "node": "18.x"
